--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header>
+  <header role="heading">
     <nav>
       <h1><a tabindex="1" href="/">Restaurant Reviews</a></h1>
     </nav>
